# augent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  tests.yml
augent/: __init__.py  __main__.py  banner.py  cli.py  clips.py  core.py  embeddings.py  export.py  graph.py  mcp.py  memory.py  search.py  speakers.py  tts.py  web.py
augent/vault_template/.obsidian/: app.json  community-plugins.json  graph.json  workspace.json
openclaw/: SKILL.md  skill.json
skills/augent/: SKILL.md
tests/: test_cli.py  test_config.py  test_export.py  test_graph.py  test_handlers.py  test_mcp.py  test_memory.py  test_search.py  test_semantic.py  test_spaces.py  test_tts.py  test_visual.py
