[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augent"
version = "2026.3.10"
description = "Audio intelligence for agents. An MCP server that lets agents download, transcribe, search, and analyze audio."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AugentDevs"}
]
keywords = [
    "audio",
    "transcription",
    "whisper",
    "faster-whisper",
    "keyword",
    "search",
    "agents",
    "claude",
    "mcp",
    "speech-to-text",
    "podcast",
    "interview",
    "speaker-diarization",
    "semantic-search",
    "chapters",
    "text-to-speech"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "torch",
    "pyfiglet",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "huggingface-hub>=0.20.0,<1.7.0",
]
clips = [
    "pydub>=0.25.0",
]
speakers = [
    "pyannote-audio>=3.1.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
]
tts = [
    "kokoro>=0.7.0",
    "soundfile",
]
separator = [
    "demucs>=4.0.0",
]
xlsx = [
    "openpyxl>=3.1.0",
]
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "huggingface-hub>=0.20.0,<1.7.0",
    "pydub>=0.25.0",
    "pyannote-audio>=3.1.0",
    "sentence-transformers>=2.2.0",
    "kokoro>=0.7.0",
    "soundfile",
    "openpyxl>=3.1.0",
    "demucs>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
augent = "augent.cli:main"
augent-web = "augent.web:main"
augent-mcp = "augent.mcp:main"

[project.urls]
Homepage = "https://github.com/AugentDevs/Augent"
Documentation = "https://github.com/AugentDevs/Augent#readme"
Repository = "https://github.com/AugentDevs/Augent"
Issues = "https://github.com/AugentDevs/Augent/issues"

[tool.setuptools.package-data]
augent = ["augentbanner.png", "favicon.png"]

[tool.setuptools.packages.find]
include = ["augent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module-level import not at top (intentional lazy imports)
]

[tool.ruff.lint.per-file-ignores]
"augent/__init__.py" = ["F401"]  # re-exports
"augent/mcp.py" = ["F401"]      # availability checks (try/import/except)
"augent/clips.py" = ["F401"]    # availability check (pydub)
"augent/separator.py" = ["F401"]  # availability check (demucs)
"augent/speakers.py" = ["F401"]   # lazy import (pyannote)
"augent/web.py" = ["B008"]        # FastAPI File/Form defaults

[tool.ruff.lint.isort]
known-first-party = ["augent"]

[tool.coverage.run]
source = ["augent"]
omit = ["augent/web.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
